--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -30,3 +30,12 @@ a,
     padding: 0 2rem;
   }
 }
+
+.router-link-active {
+  color: grey;
+  text-decoration: underline;
+}
+
+.router-link-exact-active {
+  text-decoration: none;
+}
